--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ClPaas-FrontEnd</string>
+    <string name="no_sms_yet">No SMS yet</string>
+    <string name="send_data">Send Data</string>
 </resources>
